[Feat] UserTeamRole 내 User 엔티티 삭제 + 공유 문서함에서 파일, 링크 업로드 API 추가 + 게시글 삭제 로직 수정 (#66)
* [Feat] 파트별 작업 현황 파트별 작업 진행률 조회 api 구현

# Conflicts:
#	nect-core/src/main/java/com/nect/core/repository/team/process/ProcessRepository.java

* [Fix] 충돌 수정

* [Feat] 위크미션 상태 변경/할일 항목 수정 및 순서 변경 API 추가

* [Refactor] 멤버형 프로세스 검증 추가 및 담당자 정보, 유저 정보 추가

* [Test] 변경된 컨트롤러 및 위크미션 컨트롤러 테스트

* [Refactor] 역할 영어 label을 위한 수정

* [Feat] 프로젝트 파트 조회, 팀원 정보 조회, 미션 드롭다운용 조회 api 구현

* [Test] 프로젝트 유저 조회, 프로젝트 파트, 미션 조회 테스트

* [Refactor] 오타 및 매개변수 값 수정

* [Feat] 파트별 작업 현황 파트별 작업 진행률 조회 api 구현

# Conflicts:
#	nect-core/src/main/java/com/nect/core/repository/team/process/ProcessRepository.java

* [Fix] 충돌 수정

* [Feat] 위크미션 상태 변경/할일 항목 수정 및 순서 변경 API 추가

* [Refactor] 멤버형 프로세스 검증 추가 및 담당자 정보, 유저 정보 추가

* [Test] 변경된 컨트롤러 및 위크미션 컨트롤러 테스트

* [Refactor] 역할 영어 label을 위한 수정

* [Feat] 프로젝트 파트 조회, 팀원 정보 조회, 미션 드롭다운용 조회 api 구현

* [Test] 프로젝트 유저 조회, 프로젝트 파트, 미션 조회 테스트

* [Refactor] 오타 및 매개변수 값 수정

* [Feat] 타이머 스냅샷 조회 API추가 및 팀 보드 알림 추가

* [Chore] gradle OOM 방지 임시 설정 삭제

* [Fix]   채팅 테스트 문서화 개선 & 작업실 채팅  API 유저 프로필 이미지 리팩토링 (#45)

* :fix : 아이디어 분석 생성 API 위크미션 타입 추가 개선 &  작업실 채팅& 파일업로드 개선

* :fix : 아이디어 분석 생성 API 위크미션 타입 추가 개선 &  작업실 채팅& 파일업로드 개선

* :fix : 아이디어 분석 생성 API 위크미션 타입 추가 개선 &  작업실 채팅& 파일업로드 개선

* fix ëëAI 아이디어 분석 프롬프트 개선

* fix : 작업실 ì±파일 업로드 개선 & 작업시실 채팅 API 리팩토링

* fix : IdeaAnalysisException  cause ê°추가

* fix : ChatMessageDto 빌더 패턴으로 변경

* fix : 채팅 테스트 문서화 개선 & 작업실 채팅  API 유저 프로필 이미지 리팩토링

* [Identity] 프로필 분석 (#46)

* Feat: 프로필 분석

* Fix: 회원가입 바디에 토큰 추가

* 마이페이지에 프로필 분석 추가 및 불러오기 api 수정

* Feat: 프로필 분석 삭제 기획 변경에 따른 수정

* Feat: cors 추가

* [Feat] 홈화면 기능 추가/개선 + 유저 이미지 수정 (#48)

* [Feat] 홈화면 헤더 프로필 조회 API 구현

* [Feat] 홈화면 매칭 가능한 넥터 필터링 추가

* [Refactor] 알림 조회 API 요청 파라미터 변경 scope -> filter

* [Feat] 개인 채팅 기능 추가

* [Feat] 홈 api 보류 필드 추가

* [Refactor] 채팅방 조회 로직 개선

* [Refactor] 홈 API 로직 개선

* [Test] 홈, DM 테스트 코드 작성

* [Test] Chat 테스트코드 수정

* [Refactor] 유저 이미지 반환 방식 변경

* [Fix] 모집중인 프로젝트 npe 제거

* [Refactor] 유